// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// deviations.proto defines the protocol buffer messages required to manage the
// lifecycle of deviations used in featureprofiles.

syntax = "proto3";

package openconfig.deviations;

import "third_party/openconfig/featureprofiles/proto/metadata.proto";
import "third_party/openconfig/featureprofiles/proto/ocpaths.proto";
import "third_party/openconfig/gnmi/proto/gnmi/gnmi.proto";

option go_package = "github.com/openconfig/featureprofiles/proto/deviations_go_proto;deviations";

// DeviationType specifies the type of the deviation.
enum DeviationType {
  // DEVIATION_TYPE_UNSPECIFIED indicates that the deviation type is not
  // specified.
  DEVIATION_TYPE_UNSPECIFIED = 0;
  // DEVIATION_TYPE_PATH indicates that the deviation is related to a path.
  DEVIATION_TYPE_PATH = 1;
  // DEVIATION_TYPE_VALUE indicates that the deviation is related to a value.
  DEVIATION_TYPE_VALUE = 2;
  // DEVIATION_TYPE_CLI indicates that the deviation is related to a CLI
  // command.
  DEVIATION_TYPE_CLI = 3;
}

// DeviationRegistry contains a list of deviations.
message DeviationRegistry {
  repeated Deviation deviations = 1;
}

// Deviation specifies a single deviation.
message Deviation {
  // Name of the deviation.
  string name = 1;
  // Bug ID of the deviation.
  string bug_id = 2;
  // Type of the deviation.
  DeviationType type = 3;
  // List of excluded paths for the deviation.
  openconfig.ocpaths.OCPaths excluded_paths = 4;

  // DeviationValues specifies the canonical and vendor specific values for a
  // deviation.
  message DeviationValues {
    // Canonical value for the deviation.
    gnmi.TypedValue canonical_value = 1;
    // Vendor specific value for the deviation.
    gnmi.TypedValue vendor_specific_value = 2;
  }

  // CliCommands specifies the CLI commands for a deviation.
  message CliCommands {
    // List of CLI commands.
    repeated string commands = 1;
  }

  // deviation_field specifies the additional paths, CLI commands or deviation
  // values.
  oneof deviation_field {
    // List of additional paths for the deviation.
    openconfig.ocpaths.OCPaths additional_paths = 5;
    // List of CLI commands for the deviation.
    CliCommands clis = 6;
    // Canonical and vendor specific values for the deviation.
    DeviationValues deviation_values = 7;
  }

  // List of platforms for which the deviation is applicable.
  repeated openconfig.testing.Metadata.Platform platforms = 8;
}